unpackaged/main/default/objects/LoanApplicationLiability/LoanApplicationLiability.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>