unpackaged/main/default/objects/LoanApplicationLiability/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <label>InterestRate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>