unpackaged/main/default/objects/LoanApplicationLiability/fields/Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type__c</fullName>
    <label>Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Repayment_Type</valueSetName>
    </valueSet>
</CustomField>