unpackaged/main/default/objects/LoanApplicationLiability/fields/TimeLeftOnLoan__c.field-meta.xml
<CustomField>
    <fullName>TimeLeftOnLoan__c</fullName>
    <label>TimeLeftOnLoan</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>