unpackaged/main/default/objects/LoanApplicationLiability/listViews/All_LoanApplicationLiabilities.listView-meta.xml
<ListView>
    <fullName>All_LoanApplicationLiabilities</fullName>
    <filterScope>Everything</filterScope>
    <label>All Loan Application Liabilities</label>
</ListView>